templates/01-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ${CI_PROJECT_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${CI_PROJECT_NAME}
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: ${CI_PROJECT_NAME}
  template:
    metadata:
      labels:
        app: ${CI_PROJECT_NAME}
    spec:
      containers:
      - image: ${CI_REGISTRY_IMAGE}:${BUILD_NUMBER}
        resources:
          requests:
            memory: 5Mi
            cpu: 5m
          limits:
            memory: 15Mi
            cpu: 70m
        name: kube-login
        ports:
        - name: http
          containerPort: 5556
        command: ["/login"]
        args:
          - --client-id=$(CLIENT_ID)
          - --client-secret=$(CLIENT_SECRET)
          - --issuer-root-ca=/var/run/secrets/kubernetes.io/serviceaccount/ca.crt
          - --issuer=$(OIDC_ISSUER)
          - --listen=http://0.0.0.0:5556
          - --redirect-uri=$(CALLBACK_URL)
          - --api-server=$(KUBE_APISERVER)
