templates/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}
  namespace: ${NAMESPACE}
spec:
  ports:
  - name: ${CI_PROJECT_NAME}
    port: 5556
    protocol: TCP
    targetPort: 5556
  selector:
    app: ${CI_PROJECT_NAME}
